POR/RefEdge/src/objects/Reference_Refresh_Update__c.object
<CustomObject>
    <description>Custom object to store Reference Refresh Updates(Bound 10)</description>
    <fields>
        <fullName>Accept_Reject__c</fullName>
        <label>Accept/Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reference_Refresh_Updates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_Inheritable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribute Inheritable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_From__c</fullName>
        <label>Removed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_To__c</fullName>
        <label>Added</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Reference_Refresh_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name_To_Be_Updated__c</fullName>
        <label>Mapped Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_PickList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped PickList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Longer_a_Program_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer a Program Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_change_value__c</fullName>
        <label>No Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_A_Program_Member_Reason__c</fullName>
        <label>Not A Program Member Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Member_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Member Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordToBeDeletedId__c</fullName>
        <label>Record To Be Deleted Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordsToBeInsertedId__c</fullName>
        <label>Record To Be Inserted Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh__c</fullName>
        <label>Profile Update</label>
        <referenceTo>Reference_Refresh__c</referenceTo>
        <relationshipLabel>Profile Update Details</relationshipLabel>
        <relationshipName>Reference_Refresh_Updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReferenceabilityComment__c</fullName>
        <label>Referenceability Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_Status__c</fullName>
        <label>Referenceability Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_Verified_Date__c</fullName>
        <label>Referenceability Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referenceability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referenceability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <label>Related Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Update Detail</label>
    <listViews>
        <fullName>All_Updates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Accept_Reject__c</columns>
        <columns>Referenceability__c</columns>
        <columns>Attribute__c</columns>
        <columns>Added__c</columns>
        <columns>Changed_To__c</columns>
        <columns>No_Change__c</columns>
        <columns>No_change_value__c</columns>
        <columns>Removed__c</columns>
        <columns>Changed_From__c</columns>
        <columns>Field_Api_Name_To_Be_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Updates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Update Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>